# hdl_components

./: .gitignore  .gitmodules  SourceMe
logical/grey_code/: bin_to_grey.sv  grey_code.vc  grey_counter.sv
logical/memories/: dp_ram.sv  package.vc  sp_ram.sv
logical/memories/apb_to_sram/: apb3_to_sram.sv  apb3_to_sram.vlt  apb4_to_sram.sv
logical/memories/fifo/: fifo.sv  fifo.vc  fifo_addr_ctrl_grey.sv  fifo_addr_gen_grey.sv
logical/memories/fifo/cocotb/: tb.py  tb.sv
logical/memories/interface_to_sram/axi5_lite_to_sram/: axi5_lite_to_sram.sv  readme.md
logical/registers/axi4_lite_reg/docs/: .$AXI5_to_sram.drawio.dtmp  AXI5_to_sram.drawio
logical/registers/axi4_lite_reg/scripts/: cli.py  config_reg.py  config_reg_templates.py  example_block.sv  template.json
logical/registers/axi4_lite_reg/templates/: sram_reg.template.sv
verification/: CMakeLists.txt
verification/common/clocking/: CMakeLists.txt  clocked_interface.cpp  clocked_interface.h  common_clocking.makefile  tbclock.cpp  tbclock.h
verification/common/memories/: common_sram.h
verification/common/testbench/: CMakeLists.txt  base_testbench.cpp  base_testbench.h  common_testbench.makefile  logging.h  testbench.h
verification/scripts/: README.md  make_targets  makefile  template_tb_makefile
verification/scripts/verilator/: makefile
verification/tb/memories/apb3_to_sram/cocotb/: tb.py  tb.sv
verification/tb/memories/dp_ram/: CMakeLists.txt  Makefile  tb.cpp  verilator_config.vlt
verification/tb/memories/dp_ram/cocotb/: makefile  tb.py  tb.sv
verification/tb/memories/dp_ram/tb_cpp/: tb.cpp
verification/tb/memories/dp_ram/verilator/: CMakeLists.txt  Makefile
verification/tb/memories/dp_ram/verilator/tb_cpp/: tb.cpp
verification/tb/memories/fifo/cocotb/: makefile  tb.py  tb.sv
verification/tb/memories/sp_ram/: Makefile  tb.cpp
verification/tb/memories/sp_ram/cocotb/: makefile  tb.py  tb.sv
verification/tb/memories/sp_ram/verilator/: CMakeLists.txt  tb.sv  verilator_config.vlt
verification/tb/memories/sp_ram/verilator/tb_cpp/: tb.cpp
